Adicionadas funcionalidades de gerenciamento de categorias/itens, integração com JavaFX para player de vídeo, atualizações no README e .gitignore para ignorar dependências